Release R2211:
==============
- fix regressions/bugs in ASCII output

Release R2206:
==============
- enhancement: range check for field options 'unset','default'
- ASCII output fixes

Release R2109:
==============
- enhancement: prefer default contructors and clear method over empty
  string assignments
- enhancement: optimized placement functions for varint32 and varint16
- enhancement: added option padded_message_size
 
Release R2108:
==============
- fix: mutable element access must init with default value
- fix: comments flag was mostly ignored
- fix: inconsitency related to validbits
- enhancement: suppress superflous "signed n"
- enhancement: comment updates for doxygen

Release R2106:
==============
- fix: target must be applied before generating standalone lib
- fix: member size sorting may lose members
- fix: false marshalling for uint8/int8
- enhancement: optimizations for toJSON and toASCII

Release R2104:
==============
- enhancement: encode/decode functions for custom string types
- fix: invalid generation of set(const char*) for repeated strings
- fix: fix indention issue for JSON

Release R2103:
==============
- enhancement: further size optimization
- enhancement: make use of c++11 syntax
- fix: array.h has buggy end()
- fix: erroneous control flow in setByName without valid bit

Release R2102:
==============
- fix: potential bus error with write_u64 on little endian
- fix: do not set valid flag when parsing ascii fails
- fix: stringtype handling may fallback to C type
- fix: multiple options handling
- fix: return type must be ssize_t if function returns <0
- fix: build fixes for examples
- enhancement: support for setting bytes with hex encoded data
- enhancement: updated syscfg example to demo setByName
- enhancement: added doxygen comments to the generated files
- enhancement: opimization for use of empty string as invalid value

Release R2101:
==============
- enhancement: support option used for messages